apps/todo/k8s/deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
        version: stable
    spec:
      containers:
      - name: todoapp
        image: polarsquad/todoapp-demo
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 8080
          name: todoapp
