apps/todo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
spec:
  selector:
    app: todoapp
  ports:
  - port: 80
    targetPort: todoapp
