apps/todo/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp
spec:
  rules:
  - host: todoapp.exampleforyou.com
    http:
      paths:
      - path: /
        backend:
          serviceName: todoapp
          servicePort: todoapp
